--- a/styles/style.css
+++ b/styles/style.css
@@ -7,16 +7,20 @@ body {
 }
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     width: 870px;
     background-color: #ffffff;
-    padding-left: 30px;
+    padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 hr {
     width: 807px;
     border: 1px solid #D1D1D1;
+    margin-bottom: 30px;
 }
 /* Top players style */
 .top-players {
@@ -46,3 +50,51 @@ hr {
     padding-left: 16px;
     font-size: 18px;
 }
+/* Top blogs styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title {
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    color: #562EFF;
+    text-decoration: none;
+    font-size: 16px;
+}
+/* Courses Styles */
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star {
+    font-size: 12px;
+}
+.fa-star.empty{
+    color:#AEAEAE;
+}
+
+#AEAEAE
