--- a/styles/style.css
+++ b/styles/style.css
@@ -81,11 +81,18 @@ hr {
 }
 /* Courses Styles */
 .courses {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 23px;
+   
 }
 .course{
-    padding: 5px 20px;
+    padding: 20px 10px;
+    background: #FFFFFF;
+    height: 270px;
+    width: 255px;
+    filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+    border-radius: 5px;
 }
 .course .course-banner img{
     width: 224px;
